--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_ar.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=ادارة محتوى الويب
 model.resource.com.liferay.journal.model.JournalArticle=محتوى الويب
 model.resource.com.liferay.journal.model.JournalFeed=دعم محتوى الويب
 model.resource.com.liferay.journal.model.JournalFolder=دعم محتوى الويب
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=إختر محتوى
 new-structure=بنية جديدة
 new-template-for-structure-x=القالب الجديد للبنية: {0}
