--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_bg.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Управление на уеб съдърж
 model.resource.com.liferay.journal.model.JournalArticle=Уеб съдържание
 model.resource.com.liferay.journal.model.JournalFeed=ID на уеб съдържание
 model.resource.com.liferay.journal.model.JournalFolder=ID на уеб съдържание
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Крайно уеб съдържание
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
