--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_ca.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Gestió del contingut web
 model.resource.com.liferay.journal.model.JournalArticle=Article de Contingut web
 model.resource.com.liferay.journal.model.JournalFeed=Canal de contingut web
 model.resource.com.liferay.journal.model.JournalFolder=Carpeta de contingut web
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Moure el contingut web
 new-structure=Estructura nova
 new-template-for-structure-x=Plantilla nova per a l'estructura: {0}
