--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_da.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Webindhold Management
 model.resource.com.liferay.journal.model.JournalArticle=Webindhold
 model.resource.com.liferay.journal.model.JournalFeed=Webindhold Feed
 model.resource.com.liferay.journal.model.JournalFolder=Webindhold Feed
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Footer webindhold
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
