--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_de.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Webcontent
 model.resource.com.liferay.journal.model.JournalArticle=Webcontent, Artikel
 model.resource.com.liferay.journal.model.JournalFeed=Webcontent, Feed
 model.resource.com.liferay.journal.model.JournalFolder=Webcontent, Ordner
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Webcontent verschieben
 new-structure=Neue Struktur
 new-template-for-structure-x=Neue Vorlage für Struktur: {0}
