--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_es.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Contenido web
 model.resource.com.liferay.journal.model.JournalArticle=Artículo de contenido web
 model.resource.com.liferay.journal.model.JournalFeed=Feed de contenido web
 model.resource.com.liferay.journal.model.JournalFolder=Carpeta de contenido web
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Mover el contenido web.
 new-structure=Nueva estructura
 new-template-for-structure-x=Nueva plantilla para estructura: {0}
