--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_et.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Veebisisu haldus
 model.resource.com.liferay.journal.model.JournalArticle=Veebisisu
 model.resource.com.liferay.journal.model.JournalFeed=Veebisisu kanal
 model.resource.com.liferay.journal.model.JournalFolder=Veebisisu kanal
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Jaluse veebisisu
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
