--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_eu.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Web edukiaren kudeaketa
 model.resource.com.liferay.journal.model.JournalArticle=Web edukia
 model.resource.com.liferay.journal.model.JournalFeed=Web eduki feed
 model.resource.com.liferay.journal.model.JournalFolder=Web eduki karpeta
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Web edukiaren orri-oina
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
