--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_fi.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Web-sisältö
 model.resource.com.liferay.journal.model.JournalArticle=Web-sisältöartikkeli
 model.resource.com.liferay.journal.model.JournalFeed=Web-sisältösyöte
 model.resource.com.liferay.journal.model.JournalFolder=Web-sisällön kansio
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Siirrä Web-sisältö
 new-structure=Uusi rakenne
 new-template-for-structure-x=Uusi esitysmalli rakenteelle: {0}
