--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_fr.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Gestion de contenu web
 model.resource.com.liferay.journal.model.JournalArticle=Contenu web
 model.resource.com.liferay.journal.model.JournalFeed=Article RSS de contenu web
 model.resource.com.liferay.journal.model.JournalFolder=Dossier de contenu web
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Déplacer le contenu web
 new-structure=Nouvelle structure
 new-template-for-structure-x=Nouveau modèle pour la structure {0}
