--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_hi_IN.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=लेख का संचालन
 model.resource.com.liferay.journal.model.JournalArticle=लेख
 model.resource.com.liferay.journal.model.JournalFeed=लेख फीड
 model.resource.com.liferay.journal.model.JournalFolder=लेख फीड
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=फुटर वेब कॉंटेंट
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
