--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_hr.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_hr.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Web sadržaj
 model.resource.com.liferay.journal.model.JournalArticle=Članak web sadržaja
 model.resource.com.liferay.journal.model.JournalFeed=Sažetak web sadržaja
 model.resource.com.liferay.journal.model.JournalFolder=Direktorij web sadržaja
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Web sadržaj podnožja
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
