--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_hu.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Webtartalom
 model.resource.com.liferay.journal.model.JournalArticle=Webtartalom cikk
 model.resource.com.liferay.journal.model.JournalFeed=Webtartalom csatorna
 model.resource.com.liferay.journal.model.JournalFolder=Webtartalom mappa
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Web tartalom áthelyezése
 new-structure=Új struktúra
 new-template-for-structure-x=Új sablon a következő struktúrához: {0}
