--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_in.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Pengelolaan Konten Web
 model.resource.com.liferay.journal.model.JournalArticle=Konten Web
 model.resource.com.liferay.journal.model.JournalFeed=Feed Konten Web
 model.resource.com.liferay.journal.model.JournalFolder=Feed Konten Web
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Web Content yang diberikan
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
