--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_it.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Gestione Contenuti Web
 model.resource.com.liferay.journal.model.JournalArticle=Contenuto Web
 model.resource.com.liferay.journal.model.JournalFeed=Feed Contenuto Web
 model.resource.com.liferay.journal.model.JournalFolder=Cartella Contenuto Web
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Sposta Contenuto Web
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
