--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_iw.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=תוכן אינטרנט
 model.resource.com.liferay.journal.model.JournalArticle=מאמר תוכן אינטרנט
 model.resource.com.liferay.journal.model.JournalFeed=הזנת תוכן אינטרנט
 model.resource.com.liferay.journal.model.JournalFolder=תיקיית תוכן אינטרנטי
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=העבר תוכן אינטרנט
 new-structure=מבנה חדש
 new-template-for-structure-x=תבנית חדשה למבנה: {0}
