--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_ja.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Webコンテンツの管理
 model.resource.com.liferay.journal.model.JournalArticle=Webコンテンツ
 model.resource.com.liferay.journal.model.JournalFeed=Webコンテンツのフィード
 model.resource.com.liferay.journal.model.JournalFolder=Webコンテンツフォルダー
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Webコンテンツを移動
 new-structure=新しいストラクチャー
 new-template-for-structure-x=ストラクチャーの新規テンプレート：{0}
