--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_nb.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Web-innholdadministrering
 model.resource.com.liferay.journal.model.JournalArticle=Web-innholdartikkel
 model.resource.com.liferay.journal.model.JournalFeed=Web-innholdstrøm
 model.resource.com.liferay.journal.model.JournalFolder=Nettinnholdsmappe
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Flytt web-innhold
 new-structure=Ny struktur
 new-template-for-structure-x=Ny mal for struktur: {0}
