--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_nl.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Webcontentbeheer
 model.resource.com.liferay.journal.model.JournalArticle=Webcontent artikel
 model.resource.com.liferay.journal.model.JournalFeed=Webcontentfeed
 model.resource.com.liferay.journal.model.JournalFolder=Webcontentmap
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Webcontent verplaatsen
 new-structure=Nieuwe structuur
 new-template-for-structure-x=Nieuwe sjabloon voor structuur: {0}
