--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_pt_BR.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Gerenciamento de conteúdo web
 model.resource.com.liferay.journal.model.JournalArticle=Artigo de Conteúdo Web
 model.resource.com.liferay.journal.model.JournalFeed=Feed de conteúdo web
 model.resource.com.liferay.journal.model.JournalFolder=Pasta de conteúdo web
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Mover conteúdo web
 new-structure=Nova estrutura
 new-template-for-structure-x=Novo modelo para estrutura: {0}
