--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_pt_PT.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Conteúdo Web
 model.resource.com.liferay.journal.model.JournalArticle=Artigo de Conteúdo Web
 model.resource.com.liferay.journal.model.JournalFeed=Feed de conteúdo web
 model.resource.com.liferay.journal.model.JournalFolder=Pasta de Conteúdos Web
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Mover Conteúdo Web
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
