--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_ro.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Conținut web
 model.resource.com.liferay.journal.model.JournalArticle=Conținut web
 model.resource.com.liferay.journal.model.JournalFeed=Sursă conținut web
 model.resource.com.liferay.journal.model.JournalFolder=Dosar conținut web
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Conţinut Footer
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
