--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_sk.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Správa webového obsahu
 model.resource.com.liferay.journal.model.JournalArticle=Článok webového obsahu
 model.resource.com.liferay.journal.model.JournalFeed=Kanál webového obsahu (RSS)
 model.resource.com.liferay.journal.model.JournalFolder=Priečinok webového obsahu
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Presunúť webový obsah
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
