--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_sl.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Upravljanje z vsebinami
 model.resource.com.liferay.journal.model.JournalArticle=Spletna vsebina
 model.resource.com.liferay.journal.model.JournalFeed=Bralec virov vsebin
 model.resource.com.liferay.journal.model.JournalFolder=Bralec virov vsebin
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Spletna vsebina na dnu
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
