--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_sr_RS.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_sr_RS.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Управљање Веб Садржајем
 model.resource.com.liferay.journal.model.JournalArticle=Веб Садржај
 model.resource.com.liferay.journal.model.JournalFeed=Веб Садржај Фид
 model.resource.com.liferay.journal.model.JournalFolder=Веб Садржај Директоријум
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Подножје Веб Садржаја
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
