--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_sv.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Artikelhantering
 model.resource.com.liferay.journal.model.JournalArticle=Artikel
 model.resource.com.liferay.journal.model.JournalFeed=Artikel-prenumeration
 model.resource.com.liferay.journal.model.JournalFolder=Innehållsmapp
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Sidfotsinnehåll
 new-structure=Ny struktur
 new-template-for-structure-x=Ny mall för struktur: {0}
