--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_ta_IN.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=நியுஸ்
 model.resource.com.liferay.journal.model.JournalArticle=வெப் கன்டன்ட் ஆர்ட்டிக்கிள்
 model.resource.com.liferay.journal.model.JournalFeed=வெப் கன்டன்ட் Feed
 model.resource.com.liferay.journal.model.JournalFolder=வெப் கன்டன்ட் ஃபோல்டர்
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=வெப் கன்டன்டை நகர்த்தவும்
 new-structure=புதிய அமைப்பு
 new-template-for-structure-x=புதிய மாதிரி உரு அமைப்பு: {0}
