--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_th.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=เนื้อหาเว็บ
 model.resource.com.liferay.journal.model.JournalArticle=บทความเนื้อหาเว็บ
 model.resource.com.liferay.journal.model.JournalFeed=ฟีดเนื้อหาเว็บ
 model.resource.com.liferay.journal.model.JournalFolder=โฟลเดอร์เนื้อหาเว็บ
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=ย้ายเนื้อหาเว็บ
 new-structure=โครงสร้างใหม่
 new-template-for-structure-x=เทมเพลตใหม่สำหรับโครงสร้าง: {0}
