--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_vi.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Quản lý bài viết
 model.resource.com.liferay.journal.model.JournalArticle=Bài viết tin tức
 model.resource.com.liferay.journal.model.JournalFeed=Nguồn tin tức
 model.resource.com.liferay.journal.model.JournalFolder=Thư mục web nội dung
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Chuyển bài viết
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
