--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_zh_CN.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Web 内容
 model.resource.com.liferay.journal.model.JournalArticle=Web 内容文章
 model.resource.com.liferay.journal.model.JournalFeed=Web 内容提要
 model.resource.com.liferay.journal.model.JournalFolder=Web 内容文件夹
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=移动 Web 内容
 new-structure=新结构
 new-template-for-structure-x=结构的新模板：{0}
