--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_zh_TW.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=網站內容管理
 model.resource.com.liferay.journal.model.JournalArticle=網站內容文章
 model.resource.com.liferay.journal.model.JournalFeed=網站內容消息來源
 model.resource.com.liferay.journal.model.JournalFolder=網站內容消息資料夾
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=搬移網站內容
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
