--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_el.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Διαχείριση περιεχομένου
 model.resource.com.liferay.journal.model.JournalArticle=Περιεχόμενο Web
 model.resource.com.liferay.journal.model.JournalFeed=Ροή περιεχομένου Web
 model.resource.com.liferay.journal.model.JournalFolder=Φάκελος περιεχομένων Web
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Περιεχόμενο Web υποσέλιδου
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
