--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_en_GB.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_en_GB.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Web Content (Automatic Copy)
 model.resource.com.liferay.journal.model.JournalArticle=Web Content Article (Automatic Copy)
 model.resource.com.liferay.journal.model.JournalFeed=Web Content Feed (Automatic Copy)
 model.resource.com.liferay.journal.model.JournalFolder=Web Content Folder (Automatic Copy)
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Move Web Content (Automatic Copy)
 new-structure=New Structure (Automatic Copy)
 new-template-for-structure-x=New Template for Structure: {0} (Automatic Copy)
