--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_fa.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=مدیریت محتوای سایت
 model.resource.com.liferay.journal.model.JournalArticle=محتوای سایت
 model.resource.com.liferay.journal.model.JournalFeed=دریافت محتوای سایت
 model.resource.com.liferay.journal.model.JournalFolder=پوشه‌ی محتوای سایت
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=انتخاب محتوا
 new-structure=ساختار جدید
 new-template-for-structure-x=New Template for Structure: {0}
