--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_gl.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Xestor de contidos
 model.resource.com.liferay.journal.model.JournalArticle=Artigo
 model.resource.com.liferay.journal.model.JournalFeed=Canle de contido
 model.resource.com.liferay.journal.model.JournalFolder=Canle de contido
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Contido web do pé
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
