--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_ko.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=웹 내용 관리
 model.resource.com.liferay.journal.model.JournalArticle=웹 내용
 model.resource.com.liferay.journal.model.JournalFeed=웹 내용 급식
 model.resource.com.liferay.journal.model.JournalFolder=웹 내용 급식
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=보행자 웹 내용
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
