--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_lo.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_lo.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=ການບໍລິຫານເນື້ອ
 model.resource.com.liferay.journal.model.JournalArticle=ສາລະບານເວບ
 model.resource.com.liferay.journal.model.JournalFeed=ຟິດສາລະບານເວບ
 model.resource.com.liferay.journal.model.JournalFolder=ຟິດສາລະບານເວບ
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=ສ່ວນລຸ່ມຂອງເນື້ອຫາເວບ
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
