--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_lt.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Web turinio sąrašas
 model.resource.com.liferay.journal.model.JournalArticle=Web turinio sąrašas
 model.resource.com.liferay.journal.model.JournalFeed=Web turinio sąrašas
 model.resource.com.liferay.journal.model.JournalFolder=Web turinio sąrašas
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Move Web Content
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
