--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_nl_BE.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Artikel
 model.resource.com.liferay.journal.model.JournalArticle=Artikel
 model.resource.com.liferay.journal.model.JournalFeed=Web Content type
 model.resource.com.liferay.journal.model.JournalFolder=Web Content type
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Web Content voetnoot
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
