--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_pl.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Zawartość strony
 model.resource.com.liferay.journal.model.JournalArticle=Zawartość strony
 model.resource.com.liferay.journal.model.JournalFeed=Kanał zawartości strony
 model.resource.com.liferay.journal.model.JournalFolder=Folder zawartości strony
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Stopka zawartości strony
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
