--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_tr.properties
@@ -169,6 +169,7 @@ model.resource.com.liferay.journal=Bülten
 model.resource.com.liferay.journal.model.JournalArticle=Gündem Yazısı
 model.resource.com.liferay.journal.model.JournalFeed=Gündem Besleme
 model.resource.com.liferay.journal.model.JournalFolder=Gündem Besleme
+modified-x-ago-by-x=Modified {0} ago by {1}. (Automatic Copy)
 move-web-content=Başlık Web İçeriği
 new-structure=New Structure
 new-template-for-structure-x=New Template for Structure: {0}
