--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_de.properties
@@ -156,6 +156,7 @@ fieldset-field-type-label=Feldergruppen
 filter-parameter-name=Parametername filtern
 form-entries=Formulareinträge
 form-settings=Formulareinstellungen
+form-shared-via-email=Form shared via email. (Automatic Copy)
 forms=Formulare
 from-autofill=Von automatischem Ausfüllen
 from-data-provider=Von Datenanbieter
