--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fa.properties
@@ -156,6 +156,7 @@ fieldset-field-type-label=Fields Group
 filter-parameter-name=نام پارامتر فیلتر
 form-entries=پست‌های فرم
 form-settings=تنظیمات فرم
+form-shared-via-email=Form shared via email. (Automatic Copy)
 forms=فرم‌ها
 from-autofill=از تکمیل خودکار
 from-data-provider=از فراهم کننده داده
