--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fr.properties
@@ -156,6 +156,7 @@ fieldset-field-type-label=Groupe de champs
 filter-parameter-name=Nom du paramètre de filtre
 form-entries=Entrées du formulaire
 form-settings=Paramètres de formulaire
+form-shared-via-email=Form shared via email. (Automatic Copy)
 forms=Formulaires
 from-autofill=Depuis le remplissage automatique
 from-data-provider=Depuis le fournisseur de données
