--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_hu.properties
@@ -156,6 +156,7 @@ fieldset-field-type-label=Mezőcsoport
 filter-parameter-name=Paraméternév szűrése
 form-entries=Űrlap adatok
 form-settings=Űrlap beállítások
+form-shared-via-email=Form shared via email. (Automatic Copy)
 forms=Űrlapok
 from-autofill=Feladó automatikus kitöltése
 from-data-provider=Feladó adatszolgáltatója
