--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_it.properties
@@ -156,6 +156,7 @@ fieldset-field-type-label=Fields Group
 filter-parameter-name=Filter Parameter Name
 form-entries=Elementi Modulo
 form-settings=Impostazioni Modulo
+form-shared-via-email=Form shared via email. (Automatic Copy)
 forms=Form
 from-autofill=Da riempimento automatico
 from-data-provider=Dal provider dati
