--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nl.properties
@@ -156,6 +156,7 @@ fieldset-field-type-label=Veldengroep
 filter-parameter-name=Naam filterparameter
 form-entries=Formulierinzendingen
 form-settings=Formulierinstellingen
+form-shared-via-email=Form shared via email. (Automatic Copy)
 forms=Formulieren
 from-autofill=Van automatisch aanvullen
 from-data-provider=Van dataprovider
