--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pt_BR.properties
@@ -156,6 +156,7 @@ fieldset-field-type-label=Grupo de campos
 filter-parameter-name=Nome do parâmetro filtro
 form-entries=Entradas do formulário
 form-settings=Configurações do Formulário
+form-shared-via-email=Form shared via email. (Automatic Copy)
 forms=Formulários
 from-autofill=A partir de preenchimento automático
 from-data-provider=A partir do provedor de dados
