--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pt_PT.properties
@@ -156,6 +156,7 @@ fieldset-field-type-label=Fields Group
 filter-parameter-name=Filter Parameter Name
 form-entries=Entradas de Formulário
 form-settings=Configurações do Formulário
+form-shared-via-email=Form shared via email. (Automatic Copy)
 forms=Formulários
 from-autofill=From Autofill
 from-data-provider=From Data Provider
