--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_es.properties
@@ -156,6 +156,7 @@ fieldset-field-type-label=Grupo de campos
 filter-parameter-name=Nombre de parámetro de filtro
 form-entries=Registros de formularios
 form-settings=Configuraciones del formulario
+form-shared-via-email=Form shared via email. (Automatic Copy)
 forms=Formularios
 from-autofill=De Autorrellenar
 from-data-provider=De proveedor de datos
