--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_in.properties
@@ -156,6 +156,7 @@ fieldset-field-type-label=Fields Group
 filter-parameter-name=Filter Parameter Name
 form-entries=Form Entries
 form-settings=Form Settings
+form-shared-via-email=Form shared via email. (Automatic Copy)
 forms=formulir
 from-autofill=From Autofill
 from-data-provider=From Data Provider
