--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sv.properties
@@ -156,6 +156,7 @@ fieldset-field-type-label=Fältgrupp
 filter-parameter-name=Namn på filterparameter
 form-entries=Formulärinlägg
 form-settings=Formulärinställningar
+form-shared-via-email=Form shared via email. (Automatic Copy)
 forms=Formulär
 from-autofill=Från autofyll
 from-data-provider=Från dataprovider
