--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ta_IN.properties
@@ -156,6 +156,7 @@ fieldset-field-type-label=Fields Group
 filter-parameter-name=Filter Parameter Name
 form-entries=படிவம் பதிவுகள்
 form-settings=படிவம் அமைப்புகள்
+form-shared-via-email=Form shared via email. (Automatic Copy)
 forms=படிவங்கள்
 from-autofill=தானியங்கு நிரப்பிலிருந்து
 from-data-provider=தரவு வழங்குநரிடமிருந்து
