--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_ar.properties
@@ -26,7 +26,7 @@ browse-by-structure=استعراض حسب البنية
 category.journal=إدارة المحتوى الويب
 change-list=قائمة التغيير
 changeable-default-language-description=إذا تم تحديده ، فستكون اللغة الافتراضية لمقالات محتوى الويب قابلة للتغيير. إذ يتم توريث اللغة الافتراضية لمقالات محتوى الويب من إعدادات الموقع.
-changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Changing the friendly URL will affect all web content article versions, even when saving it as draft. (Automatic Copy)
+changing-the-friendly-url-will-affect-all-web-content-article-versions-even-when-saving-it-as-a-draft=سيؤثر تغيير عنوان URL المألوف على جميع إصدارات مقالة محتوى الويب حتى عند حفظه كمسودة. (Automatic Translation)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=تغيير اللغة لا يؤدي تلقائيًا إلى ترجمة نص القالب الموجود.
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=لن يؤثر تغيير النموذج على القالب الافتراضي<strong> لمحتوى الويب الأصلي</strong>.<strong> لا ينطبق التغيير إلا على عرض محتوى الويب هذا فقط</strong>.
 characters-blacklist=قائمة الأحرف السوداء
