--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_de.properties
@@ -26,7 +26,7 @@ browse-by-structure=Nach Struktur filtern
 category.journal=Webcontentverwaltung
 change-list=Änderungsliste
 changeable-default-language-description=Ist diese Option ausgewählt, ist die Standardsprache von Webcontent änderbar. Die Standardsprache für Webcontent wird von den Einstellungen der Site vererbt.
-changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Changing the friendly URL will affect all web content article versions, even when saving it as draft. (Automatic Copy)
+changing-the-friendly-url-will-affect-all-web-content-article-versions-even-when-saving-it-as-a-draft=Changing the friendly URL will affect all web content article versions even when saving it as a draft. (Automatic Copy)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Das Ändern der Sprache übersetzt das vorhandene Vorlagenskript nicht automatisch.
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=Das Verändern der Vorlage <strong>hat keine Auswirkungen auf die Standardvorlage des originalen Web-Inhalts</strong>. <strong>Die Veränderung gilt nur für die Anzeige dieses Web-Inhalts</strong>.
 characters-blacklist=Zeichen-Blacklist
