--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_fi.properties
@@ -26,7 +26,7 @@ browse-by-structure=Selaa rakenteiden kautta
 category.journal=Web-sisällön hallinta
 change-list=Muutosluettelo
 changeable-default-language-description=Jos valittu, web-sisällön oletuskieltä voidaan muuttaa. Web-sisällön oletuskieli peritään sivuston asetuksista.
-changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Changing the friendly URL will affect all web content article versions, even when saving it as draft. (Automatic Copy)
+changing-the-friendly-url-will-affect-all-web-content-article-versions-even-when-saving-it-as-a-draft=Changing the friendly URL will affect all web content article versions even when saving it as a draft. (Automatic Copy)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Kielen vaihtaminen ei automaattisesti käännä olemassa olevaa mallikomentosarjaa.
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=Mallin muuttaminen <strong>ei vaikuta alkuperäiseen Web-sisällön</strong> oletusmalliin. <strong>Muutos koskee vain tämän web sisällön näyttämistä</strong>.
 characters-blacklist=Merkkien Musta Lista
