--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_fr.properties
@@ -26,7 +26,7 @@ browse-by-structure=Naviguer par structure
 category.journal=Gestion de contenu web
 change-list=Liste de modifications
 changeable-default-language-description=Si cochée, la langue par défaut des articles du contenu web sera modifiable. La langue par défaut des articles du contenu web est héritée des paramètres du site.
-changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Changing the friendly URL will affect all web content article versions, even when saving it as draft. (Automatic Copy)
+changing-the-friendly-url-will-affect-all-web-content-article-versions-even-when-saving-it-as-a-draft=La modification de l'URL conviviale affectera toutes les versions d'article de contenu Web, même lors de son enregistrement sous forme de brouillon. (Automatic Translation)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Changer la langue ne traduit pas automatiquement le script de modèle existant.
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=Changer le modèle <strong>n'affectera pas le modèle par défaut des contenus Web d'origine</strong>. <strong>La modification ne s'appliquera qu'à cet affichage de contenu web</strong>.
 characters-blacklist=Liste noire des caractères
