--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_hu.properties
@@ -26,7 +26,7 @@ browse-by-structure=Struktúra alapú böngészés
 category.journal=Webes tartalomkezelés
 change-list=Változáslista
 changeable-default-language-description=Ha bejelölték, a web tartalmi indexek alapértelmezett nyelve módosítható lesz. A web tartalmi cikkek az alapértelmezett nyelvüket a webhely beállításaitól öröklődik.
-changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Changing the friendly URL will affect all web content article versions, even when saving it as draft. (Automatic Copy)
+changing-the-friendly-url-will-affect-all-web-content-article-versions-even-when-saving-it-as-a-draft=A barátságos URL módosítása hatással lesz a webes tartalomcikk összes verziójára, még akkor is, ha piszkozatként menti. (Automatic Translation)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=A nyelvváltás nem fordítja le automatikusan a létező sablon parancsfájlját.
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=A sablon megváltoztatása <strong>nincs hatással az eredeti webes tartalom</strong> alapértelmezett sablonjára. <strong>A változás csak a jelen webes tartalom megjelenítésére vonatkozik</strong>.
 characters-blacklist=Karakterek feketelistája
