--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_ko.properties
@@ -26,7 +26,7 @@ browse-by-structure=Browse by Structure
 category.journal=웹 내용 관리
 change-list=Change List
 changeable-default-language-description=If checked, the default language of web content articles will be changeable. The default language of web content articles is inherited from the site settings.
-changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Changing the friendly URL will affect all web content article versions, even when saving it as draft. (Automatic Copy)
+changing-the-friendly-url-will-affect-all-web-content-article-versions-even-when-saving-it-as-a-draft=친숙한 URL을 변경하면 초안으로 저장하는 경우에도 모든 웹 콘텐츠 아티클 버전에 영향을 미칩니다. (Automatic Translation)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Changing the language does not automatically translate the existing template script.
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=템플릿을 변경해도 원본 웹 콘텐츠 기본 템플릿에는 영향을 미치지 않습니다. 변경 사항은 이 웹 컨텐츠 표시에만 적용됩니다.
 characters-blacklist=Characters Blacklist
