--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_th.properties
@@ -26,7 +26,7 @@ browse-by-structure=ค้นหาตามโครงสร้าง
 category.journal=การจัดการเนื้อหาเว็บ
 change-list=เปลี่ยนรายการ
 changeable-default-language-description=ถ้าเลือก ภาษาเริ่มต้นของบทความเนื้อหาเว็บจะสามารถเปลี่ยนแปลงได้ ภาษาเริ่มต้นของบทความเนื้อหาเว็บสืบทอดมาจากการตั้งค่าเว็บไซต์
-changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Changing the friendly URL will affect all web content article versions, even when saving it as draft. (Automatic Copy)
+changing-the-friendly-url-will-affect-all-web-content-article-versions-even-when-saving-it-as-a-draft=การเปลี่ยน URL ที่จําง่ายจะมีผลต่อเนื้อหาเว็บทุกเวอร์ชันของบทความแม้ว่าจะบันทึกเป็นแบบร่าง (Automatic Translation)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Changing the language does not automatically translate the existing template script.
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=Changing the template will not affect the original web content default template. The change only applies to this web content display.
 characters-blacklist=ความประพฤติบัญชีดำ
