--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_zh_CN.properties
@@ -26,7 +26,7 @@ browse-by-structure=按结构浏览
 category.journal=Web 内容管理
 change-list=变更列表
 changeable-default-language-description=如果勾选此项，web内容文章的默认语言将会变为可更改的。web内容文章的默认语言是从站点设置继承的。
-changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Changing the friendly URL will affect all web content article versions, even when saving it as draft. (Automatic Copy)
+changing-the-friendly-url-will-affect-all-web-content-article-versions-even-when-saving-it-as-a-draft=更改友好的 URL 也会影响所有 Web 内容文章版本，即使将其保存为草稿也是如此。 (Automatic Translation)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=更改语言不会自动翻译现有的模板脚本。
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=更改模板<strong>将不会影响原始的 Web 内容</strong>默认模板。<strong>更改仅适用于其 Web 内容显示</strong>。
 characters-blacklist=字符黑名单
