--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_en_GB.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_en_GB.properties
@@ -26,7 +26,7 @@ browse-by-structure=Browse by Structure (Automatic Copy)
 category.journal=Web Content Management (Automatic Copy)
 change-list=Change List (Automatic Copy)
 changeable-default-language-description=If checked, the default language of web content articles will be changeable. The default language of web content articles is inherited from the site settings. (Automatic Copy)
-changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Changing the friendly URL will affect all web content article versions, even when saving it as draft. (Automatic Copy)
+changing-the-friendly-url-will-affect-all-web-content-article-versions-even-when-saving-it-as-a-draft=Changing the friendly URL will affect all web content article versions even when saving it as a draft. (Automatic Copy)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Changing the language does not automatically translate the existing template script. (Automatic Copy)
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=Changing the template will not affect the original web content default template. The change only applies to this web content display. (Automatic Copy)
 characters-blacklist=Characters Blacklist (Automatic Copy)
