--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_es.properties
@@ -26,7 +26,7 @@ browse-by-structure=Examinar por estructura
 category.journal=Gestión de contenidos web
 change-list=Lista de cambios
 changeable-default-language-description=Si está activado, el idioma por defecto del contenido de los artículos de la web se podría cambiar. El idioma por defecto del contenido de los artículos de la web se hereda de la configuración del sitio.
-changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Al cambiar la URL amigable todas las versiones del contenido web se verán afectadas, incluso si se guarda como borrador.
+changing-the-friendly-url-will-affect-all-web-content-article-versions-even-when-saving-it-as-a-draft=Cambiar la URL descriptiva afectará a todas las versiones de artículos de contenido web incluso al guardarla como borrador. (Automatic Translation)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Al cambiar el idioma, no se traduce automáticamente el script de plantilla existente.
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=Aunque se cambie la plantilla, esto <strong>no afectará a la plantilla por defecto de contenido web original</strong>. <strong>El cambio solo se aplica en esta visualización de contenido web</strong>.
 characters-blacklist=Lista negra de caracteres
