--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_it.properties
@@ -26,7 +26,7 @@ browse-by-structure=Sfoglia per Struttura
 category.journal=Gestione Contenuti Web
 change-list=Change List
 changeable-default-language-description=Se selezionato, la lingua predefinita dei contenuti web sarà modificabile. La lingua predefinita dei contenuti web viene ereditata dalle impostazioni sito.
-changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Changing the friendly URL will affect all web content article versions, even when saving it as draft. (Automatic Copy)
+changing-the-friendly-url-will-affect-all-web-content-article-versions-even-when-saving-it-as-a-draft=La modifica dell'URL descrittivo influirà su tutte le versioni degli articoli di contenuto Web anche quando viene salvato come bozza. (Automatic Translation)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Changing the language does not automatically translate the existing template script.
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=Changing the template will not affect the original web content default template. The change only applies to this web content display.
 characters-blacklist=Characters Blacklist
