--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_pl.properties
@@ -26,7 +26,7 @@ browse-by-structure=Przeglądaj strukturę
 category.journal=Zarządzanie treścią
 change-list=Change List
 changeable-default-language-description=If checked, the default language of web content articles will be changeable. The default language of web content articles is inherited from the site settings.
-changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Changing the friendly URL will affect all web content article versions, even when saving it as draft. (Automatic Copy)
+changing-the-friendly-url-will-affect-all-web-content-article-versions-even-when-saving-it-as-a-draft=Zmiana przyjaznego adresu URL wpłynie na wszystkie wersje artykułów o zawartości sieci Web, nawet jeśli zapisuje go jako wersji roboczej. (Automatic Translation)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Changing the language does not automatically translate the existing template script.
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=Changing the template will not affect the original web content default template. The change only applies to this web content display.
 characters-blacklist=Characters Blacklist
