--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_pt_BR.properties
@@ -26,7 +26,7 @@ browse-by-structure=Navegar por Estrutura
 category.journal=Gerenciamento de Conteúdo Web
 change-list=Lista de Modificações
 changeable-default-language-description=Se selecionado, o idioma padrão dos artigos de conteúdo web será mutável. O idioma padrão dos artigos de conteúdo web é herdado das configurações do site.
-changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Changing the friendly URL will affect all web content article versions, even when saving it as draft. (Automatic Copy)
+changing-the-friendly-url-will-affect-all-web-content-article-versions-even-when-saving-it-as-a-draft=Alterar a URL amigável afetará todas as versões de artigos de conteúdo da Web, mesmo quando salvá-la como um rascunho. (Automatic Translation)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Modificar o idioma não traduz automaticamente o script modelo existente.
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=Alterar o modelo <strong>não afetará o modelo padrão do Conteúdo Web</strong> original. <strong>A alteração só aplica-se a esta exibição de conteúdo web</strong>.
 characters-blacklist=Lista de bloqueios de caracteres
